--- a/discord-theme.html
+++ b/discord-theme.html
@@ -30,6 +30,7 @@ Credits:
 	<meta name="font:Body font" content="Whitney"/>
 	<meta name="font:Header font" content="Ginto"/>
 	<meta name="text:Font size" content="16px" />
+	<meta name="text:Post width" content="100%" />
 	
 	<meta name="image:Header" content="{HeaderImage}"/>
 	<meta name="color:Title if header is showing" content="#fff" />
@@ -47,9 +48,9 @@ Credits:
 	
 	<meta name="color:Timestamps and post divider" content="#ed4245"/>
 	<meta name="color:Post divider More link" content="#fff"/>
-	<meta name="if:Dates formatted month first" content="0" />
-	<meta name="if:Show timestamp" content="1" />
-	<meta name="if:24 hour timestamps" content="0" />
+    <meta name="if:Dates formatted month first" content="0" />
+    <meta name="if:Show timestamp" content="1" />
+    <meta name="if:24 hour timestamps" content="0" />
 	<meta name="if:Show Discord tag" content="1" />
 	<meta name="text:Discord tag" content="0000" />
 	
@@ -199,6 +200,78 @@ Credits:
 		{/block:Text}
 		
 		
+		
+		<!--<ol>
+		{block:Photo}
+			<li class="post photo">
+				<img src="{PhotoURL-500}" alt="{PhotoAlt}"/>
+
+				{block:Caption}
+					<div class="caption">{Caption}</div>
+				{/block:Caption}
+			</li>
+		{/block:Photo}{block:Panorama}
+			<li class="post panorama">
+				{LinkOpenTag}
+					<img src="{PhotoURL-Panorama}" alt="{PhotoAlt}"/>
+				{LinkCloseTag}{block:Caption}
+					<div class="caption">{Caption}</div>
+				{/block:Caption}
+			</li>
+		{/block:Panorama}{block:Photoset}
+			<li class="post photoset">
+				{Photoset-500}{block:Caption}
+					<div class="caption">{Caption}</div>
+				{/block:Caption}
+			</li>
+		{/block:Photoset}{block:Quote}
+			<li class="post quote">
+				"{Quote}"
+
+				{block:Source}
+					<div class="source">{Source}</div>
+				{/block:Source}
+			</li>
+		{/block:Quote}{block:Link}
+			<li class="post link">
+				<a href="{URL}" class="link" {Target}>{Name}</a>
+
+				{block:Description}
+					<div class="description">{Description}</div>
+				{/block:Description}
+			</li>
+		{/block:Link}{block:Chat}
+			<li class="post chat">
+				{block:Title}
+					<h3><a href="{Permalink}">{Title}</a></h3>
+				{/block:Title}
+
+				<ul class="chat">
+					{block:Lines}
+						<li class="{Alt} user_{UserNumber}">
+							{block:Label}
+								<span class="label">{Label}</span>
+							{/block:Label}{Line}
+						</li>
+					{/block:Lines}
+				</ul>
+			</li>
+		{/block:Chat}{block:Video}
+			<li class="post video">
+				{Video-500}{block:Caption}
+					<div class="caption">{Caption}</div>
+				{/block:Caption}
+			</li>
+		{/block:Video}{block:Audio}
+			<li class="post audio">
+				{AudioEmbed}{block:Caption}
+					<div class="caption">{Caption}</div>
+				{/block:Caption}
+			</li>
+		{/block:Audio}
+		</ol> -->
+
+
 		<div class="actions">
 			{block:NoteCount}<span class="notecount">{NoteCountWithLabel}</span>{/block:NoteCount}
 			<a href="{Permalink}" data-tippy-content="{lang:Permalink}">
