--- a/discord-theme.html
+++ b/discord-theme.html
@@ -21,38 +21,47 @@ Credits:
 	<link rel="apple-touch-icon-precomposed" href="{PortraitURL-128}">
 	<link rel="alternate" type="application/rss+xml" href="{RSS}">
 	
-	<meta name="if:Show Random post link" content="1" />
-	<meta name="if:Show Archive link" content="1" />
+	<meta name="if:Show Random post link" content="1">
+	<meta name="if:Show Archive link" content="1">
+	
+	<meta name="text:FAQ" content="">
+	<meta name="text:Submission guidelines" content="">
 	
 	<meta name="select:Default theme" content="dark" title="Dark">
 	<meta name="select:Default theme" content="light" title="Light">
 	
-	<meta name="font:Body font" content="Whitney"/>
-	<meta name="font:Header font" content="Ginto"/>
-	<meta name="text:Font size" content="16px" />
-	<meta name="text:Post width" content="100%" />
+	<meta name="select:Header image focus area" content="center" title="Center">
+	<meta name="select:Header image focus area" content="top" title="Top">
+	<meta name="select:Header image focus area" content="bottom" title="Bottom">
+	<meta name="select:Header image focus area" content="left" title="Left">
+	<meta name="select:Header image focus area" content="right" title="Right">
 	
-	<meta name="image:Header" content="{HeaderImage}"/>
-	<meta name="color:Title if header is showing" content="#fff" />
-	<meta name="color:Servers navbar" content="#3ba55d"/>
-	<meta name="color:Dark mode headers and accent" content="#fff"/>
-	<meta name="color:Light mode headers and accent" content="#060607"/>
-	<meta name="color:Dark mode links" content="#00aff4"/>
-	<meta name="color:Light mode links" content="#0068e0"/>
-	<meta name="color:Discord logo" content="#5865f2"/>
+	<meta name="font:Body font" content="Whitney">
+	<meta name="font:Header font" content="Ginto">
+	<meta name="text:Font size" content="16px">
+	<meta name="text:Post width" content="100%">
 	
-	<meta name="color:Dark mode bold" content="#dcddde"/>
-	<meta name="color:Light mode bold" content="#2e3338"/>
-	<meta name="color:Dark mode italics" content="#dcddde"/>
-	<meta name="color:Light mode italics" content="#2e3338"/>
+	<meta name="image:Header" content="{HeaderImage}">
+	<meta name="color:Title if header is showing" content="#fff">
+	<meta name="color:Servers navbar" content="#3ba55d">
+	<meta name="color:Dark mode headers and accent" content="#fff">
+	<meta name="color:Light mode headers and accent" content="#060607">
+	<meta name="color:Dark mode links" content="#00aff4">
+	<meta name="color:Light mode links" content="#0068e0">
+	<meta name="color:Discord logo" content="#5865f2">
 	
-	<meta name="color:Timestamps and post divider" content="#ed4245"/>
-	<meta name="color:Post divider More link" content="#fff"/>
-    <meta name="if:Dates formatted month first" content="0" />
-    <meta name="if:Show timestamp" content="1" />
-    <meta name="if:24 hour timestamps" content="0" />
-	<meta name="if:Show Discord tag" content="1" />
-	<meta name="text:Discord tag" content="0000" />
+	<meta name="color:Dark mode bold" content="#dcddde">
+	<meta name="color:Light mode bold" content="#2e3338">
+	<meta name="color:Dark mode italics" content="#dcddde">
+	<meta name="color:Light mode italics" content="#2e3338">
+	
+	<meta name="color:Timestamps and post divider" content="#ed4245">
+	<meta name="color:Post divider More link" content="#fff">
+    <meta name="if:Dates formatted month first" content="0">
+    <meta name="if:Show timestamp" content="1">
+    <meta name="if:24 hour timestamps" content="0">
+	<meta name="if:Show Discord tag" content="1">
+	<meta name="text:Discord tag" content="0000">
 	
 <link rel="stylesheet" href="discord-theme.css">
 
@@ -165,9 +174,22 @@ Credits:
 </header>
 
 <main id="allposts">
+	
+	{block:AskPage}
+	<div class="ask-submit-wrapper">
+		<div>{text:FAQ}</div>
+		<iframe frameborder="0" border="0" scrolling="no" width="100%" height="190" src="https://www.tumblr.com/ask_form/{Name}.tumblr.com"></iframe>
+	</div>
+	{/block:AskPage}
+	{block:SubmitPage}
+	<div class="ask-submit-wrapper">
+		<div>{text:Submission guidelines}</div>
+		<iframe frameborder="0" border="0" scrolling="no" width="100%" height="368" src="https://www.tumblr.com/submit_form/{Name}.tumblr.com"></iframe>
+	</div>
+	{/block:SubmitPage}
 
-	{block:NoPosts}<p>{lang:No posts found}</p>{/block:NoPosts}
-	{block:NoSearchResults}<p>{lang:Sorry no search results found}</p>{/block:NoSearchResults}
+	{block:IndexPage}{block:NoPosts}<p>{lang:No posts found}</p>{/block:NoPosts}{/block:IndexPage}
+	{block:SearchPage}{block:NoSearchResults}<p>{lang:Sorry no search results found}</p>{/block:NoSearchResults}{/block:SearchPage}
 	
 	{block:Posts}
 
@@ -183,7 +205,7 @@ Credits:
 		
 		{block:PinnedPostLabel}<div class="pinned">
 			<svg width="1.0625em" height="1.0625em" viewBox="0 0 17 17" xmlns="http://www.w3.org/2000/svg" version="1.1" preserveAspectRatio="xMinYMin"><use xlink:href="#img-pin"></use></svg>
-			<p>{PinnedPostLabel}</p>
+			<p><a class="username">{Name}</a> pinned a message to this channel.</p>
 		</div>{/block:PinnedPostLabel}
 	
 	
