--- a/discord-theme.html
+++ b/discord-theme.html
@@ -213,6 +213,8 @@ Credits:
 		
 		{block:Title}<h3 class="title">{Title}</h3>{/block:Title}
 		
+		
+		
 		<div class="postbody">
 		
 		{block:Text}
@@ -350,7 +352,7 @@ Credits:
 				{/block:NotReblog}
 				{block:RebloggedFrom}
 				<img src="{ReblogRootPortraitURL-64}" class="circle usericon"/>
-				<span class="username">{ReblogRootName}</span>
+				<span class="username {block:IsDeactivated}deactivated{/block:IsDeactivated}">{ReblogRootName}</span>
 				{/block:RebloggedFrom}
 				<div class="content">
 					<blockquote class="quotetext">{Quote}</blockquote>
@@ -394,6 +396,77 @@ Credits:
 			{/block:Reblogs}
 		{/block:Link}
 		
+		{block:Chat}
+			<div class="bodyitem">
+				{block:NotReblog}
+				<img src="{PortraitURL-64}" class="circle usericon"/>
+				<a class="username" href="{Permalink}">{PostAuthorName}</a>
+				{/block:NotReblog}
+				{block:RebloggedFrom}
+				<img src="{ReblogRootPortraitURL-64}" class="circle usericon"/>
+				<span class="username">{ReblogRootName}</span>
+				{/block:RebloggedFrom}
+				<div class="content">
+					<ul class="boxquote chat">
+						{block:Lines}
+						<li class="{Alt}">{block:Label}<strong>{Label}</strong> {/block:Label}{Line}</li>
+						{/block:Lines}
+					</ul>
+				</div>
+			</div>
+		{/block:Chat}
+		
+		{block:Audio}
+			<div class="bodyitem">
+				{block:NotReblog}
+				<img src="{PortraitURL-64}" class="circle usericon"/>
+				<a class="username" href="{Permalink}">{PostAuthorName}</a>
+				{/block:NotReblog}
+				{block:RebloggedFrom}
+				<img src="{ReblogRootPortraitURL-64}" class="circle usericon"/>
+				<a class="username {block:IsDeactivated}deactivated{/block:IsDeactivated}" href="ReblogRootURL">{ReblogRootName}</a>
+				{/block:RebloggedFrom}
+				<div class="content">
+					{block:AudioEmbed}{AudioEmbed}{/block:AudioEmbed}
+					{Body}
+				</div>
+			</div>
+			
+			{block:Reblogs}
+			<div class="bodyitem">
+				<img src="{PortraitURL-64}" class="circle usericon"/>
+				<a class="username {block:IsDeactivated}deactivated{/block:IsDeactivated}" href="{Permalink}">{Username}</a>
+				<div class="content">{Body}</div>
+			</div>
+			{/block:Reblogs}
+		{/block:Audio}
+		
+		{block:Video}
+			<div class="bodyitem">
+				{block:NotReblog}
+				<img src="{PortraitURL-64}" class="circle usericon"/>
+				<a class="username" href="{Permalink}">{PostAuthorName}</a>
+				{/block:NotReblog}
+				{block:RebloggedFrom}
+				<img src="{ReblogRootPortraitURL-64}" class="circle usericon"/>
+				<a class="username {block:IsDeactivated}deactivated{/block:IsDeactivated}" href="ReblogRootURL">{ReblogRootName}</a>
+				{/block:RebloggedFrom}
+				<div class="content">
+					{Video-700}
+					{block:NotReblog}{block:Caption}{Caption}{/block:Caption}{/block:NotReblog}
+					{block:RebloggedFrom}{Body}{/block:RebloggedFrom}
+				</div>
+			</div>
+			
+			{block:Reblogs}
+			<div class="bodyitem">
+				<img src="{PortraitURL-64}" class="circle usericon"/>
+				<a class="username {block:IsDeactivated}deactivated{/block:IsDeactivated}" href="{Permalink}">{Username}</a>
+				<div class="content">{Body}</div>
+			</div>
+			{/block:Reblogs}
+		{/block:Video}
+		
 		{block:Answer}
 			<div class="bodyitem">
 				<img src="{block:NotReblog}{PortraitURL-64}{/block:NotReblog}{block:Answerer}{AnswererPortraitURL-64}{/block:Answerer}" class="circle usericon"/>
@@ -420,37 +493,6 @@ Credits:
 		</div>
 		
 		
-		<!--<ol>
-		{block:Chat}
-			<li class="post chat">
-				{block:Title}
-					<h3><a href="{Permalink}">{Title}</a></h3>
-				{/block:Title}
-
-				<ul class="chat">
-					{block:Lines}
-						<li class="{Alt} user_{UserNumber}">
-							{block:Label}
-								<span class="label">{Label}</span>
-							{/block:Label}{Line}
-						</li>
-					{/block:Lines}
-				</ul>
-			</li>
-		{/block:Chat}{block:Video}
-			<li class="post video">
-				{Video-500}{block:Caption}
-					<div class="caption">{Caption}</div>
-				{/block:Caption}
-			</li>
-		{/block:Video}{block:Audio}
-			<li class="post audio">
-				{AudioEmbed}{block:Caption}
-					<div class="caption">{Caption}</div>
-				{/block:Caption}
-			</li>
-		{/block:Audio}
-		</ol> -->
 
 		{block:Date}
 		<div class="actions">
@@ -534,7 +576,7 @@ Credits:
 			<path fill="currentColor" fill-rule="evenodd" d="M16.886 7.999H20C21.104 7.999 22 8.896 22 9.999V11.999H2V9.999C2 8.896 2.897 7.999 4 7.999H7.114C6.663 7.764 6.236 7.477 5.879 7.121C4.709 5.951 4.709 4.048 5.879 2.879C7.012 1.746 8.986 1.746 10.121 2.877C11.758 4.514 11.979 7.595 11.998 7.941C11.9991 7.9525 11.9966 7.96279 11.9941 7.97304C11.992 7.98151 11.99 7.98995 11.99 7.999H12.01C12.01 7.98986 12.0079 7.98134 12.0058 7.97287C12.0034 7.96282 12.0009 7.95286 12.002 7.942C12.022 7.596 12.242 4.515 13.879 2.878C15.014 1.745 16.986 1.746 18.121 2.877C19.29 4.049 19.29 5.952 18.121 7.121C17.764 7.477 17.337 7.764 16.886 7.999ZM7.293 5.707C6.903 5.316 6.903 4.682 7.293 4.292C7.481 4.103 7.732 4 8 4C8.268 4 8.519 4.103 8.707 4.292C9.297 4.882 9.641 5.94 9.825 6.822C8.945 6.639 7.879 6.293 7.293 5.707ZM14.174 6.824C14.359 5.941 14.702 4.883 15.293 4.293C15.481 4.103 15.732 4 16 4C16.268 4 16.519 4.103 16.706 4.291C17.096 4.682 17.097 5.316 16.707 5.707C16.116 6.298 15.057 6.642 14.174 6.824ZM3 13.999V19.999C3 21.102 3.897 21.999 5 21.999H11V13.999H3ZM13 13.999V21.999H19C20.104 21.999 21 21.102 21 19.999V13.999H13Z" clip-rule="evenodd"/>
 		</g>
 		<g id="img-likes">
-			<path xmlns="http://www.w3.org/2000/svg" fill="currentColor" d="M35.885 11.833c0-5.45-4.418-9.868-9.867-9.868-3.308 0-6.227 1.633-8.018 4.129-1.791-2.496-4.71-4.129-8.017-4.129-5.45 0-9.868 4.417-9.868 9.868 0 .772.098 1.52.266 2.241C1.751 22.587 11.216 31.568 18 34.034c6.783-2.466 16.249-11.447 17.617-19.959.17-.721.268-1.469.268-2.242z"/>
+			<path fill="currentColor" d="M35.885 11.833c0-5.45-4.418-9.868-9.867-9.868-3.308 0-6.227 1.633-8.018 4.129-1.791-2.496-4.71-4.129-8.017-4.129-5.45 0-9.868 4.417-9.868 9.868 0 .772.098 1.52.266 2.241C1.751 22.587 11.216 31.568 18 34.034c6.783-2.466 16.249-11.447 17.617-19.959.17-.721.268-1.469.268-2.242z"/>
 		</g>
 		<g id="img-nitro">
 			<path fill="currentColor" d="M4 0L0 4V8L4 12L8 8V4L4 0ZM7 7.59L4 10.59L1 7.59V4.41L4 1.41L7 4.41V7.59Z"/><path fill="currentColor" d="M2 4.83V7.17L4 9.17L6 7.17V4.83L4 2.83L2 4.83Z"/>
