--- a/discord-theme.html
+++ b/discord-theme.html
@@ -656,28 +656,35 @@ Credits:
 <footer id="navigate"><div>
 	<svg width="1.25em" height="1.25em" viewBox="0 0 512 512" xmlns="http://www.w3.org/2000/svg" version="1.1" preserveAspectRatio="xMinYMin"><use xlink:href="#img-copyright"></use></svg>
 	<p>{Name} {CopyrightYears}</p>
-	{block:TagPage}<div class="navigation">
-	<!--<p class="tagorder">Sort <a href="{TagURL}">newest first</a> or <a href="{TagURLChrono}">oldest first</a></p>{/block:TagPage}-->
-	{block:Pagination}<div class="paginate">
+	{block:TagPage}
+	<div class="navigation">
+	<!--<p class="tagorder">Sort <a href="{TagURL}">newest first</a> or <a href="{TagURLChrono}">oldest first</a></p>-->
+	{/block:TagPage}
+	{block:Pagination}
+	<div class="paginate">
 		{block:PreviousPage}<a class="prev" href="{PreviousPage}" data-tippy-content="{lang:Previous}"><svg width="1.25em" height="1.25em" viewBox="0 0 18 18" xmlns="http://www.w3.org/2000/svg" version="1.1" preserveAspectRatio="xMinYMin"><use xlink:href="#img-arrow"></use></svg></a>{/block:PreviousPage}
 		<p class="curr">{CurrentPage}</p>
 		<p>{TotalPages}</p>
 		{block:NextPage}<a class="next" href="{NextPage}" data-tippy-content="{lang:Next}"><svg width="1.25em" height="1.25em" viewBox="3 2 18 18" xmlns="http://www.w3.org/2000/svg" version="1.1" preserveAspectRatio="xMinYMin"><use xlink:href="#img-arrow"></use></svg></a>{/block:NextPage}
-	</div>{/block:Pagination}
+	</div>
+	{/block:Pagination}
+	{block:TagPage}</div>{/block:TagPage}
 	
-	{block:PermalinkPagination}<div class="paginate">
+	{block:PermalinkPage}{block:PermalinkPagination}
+	<div class="paginate">
 		{block:PreviousPost}<a class="prev" href="{PreviousPost}" data-tippy-content="{lang:Previous post}"><svg width="1.25em" height="1.25em" viewBox="0 0 18 18" xmlns="http://www.w3.org/2000/svg" version="1.1" preserveAspectRatio="xMinYMin"><use xlink:href="#img-arrow"></use></svg></a>{/block:PreviousPost}
 		<p>{lang:See more posts}</p>
 		{block:NextPost}<a class="next" href="{NextPost}" data-tippy-content="{lang:Next post}"><svg width="1.25em" height="1.25em" viewBox="3 2 18 18" xmlns="http://www.w3.org/2000/svg" version="1.1" preserveAspectRatio="xMinYMin"><use xlink:href="#img-arrow"></use></svg></a>{/block:NextPost}
-	</div>{/block:PermalinkPagination}
+	</div>
+	{/block:PermalinkPagination}{/block:PermalinkPage}
 	
-	{block:DayPagination}<div class="paginate">
+	{block:DayPage}{block:DayPagination}
+	<div class="paginate">
 		{block:PreviousDayPage}<a class="prev" href="{PreviousDayPage}" data-tippy-content="{lang:Previous day}"><svg width="1.25em" height="1.25em" viewBox="0 0 18 18" xmlns="http://www.w3.org/2000/svg" version="1.1" preserveAspectRatio="xMinYMin"><use xlink:href="#img-arrow"></use></svg></a>{/block:PreviousDayPage}
 		<p>{lang:See more posts}</p>
 		{block:NextDayPage}<a class="next" href="{NextDayPage}" data-tippy-content="{lang:Next day}"><svg width="1.25em" height="1.25em" viewBox="3 2 18 18" xmlns="http://www.w3.org/2000/svg" version="1.1" preserveAspectRatio="xMinYMin"><use xlink:href="#img-arrow"></use></svg></a>{/block:NextDayPage}
-	</div>{/block:DayPagination}
-	
-	{block:TagPage}</div>{/block:TagPage}
+	</div>
+	{/block:DayPagination}{/block:DayPage}
 </div></footer>
 
 <svg display="none">
