Uploaded discord-theme.js as Tumblr asset

--- a/discord-theme.html
+++ b/discord-theme.html
@@ -776,7 +776,7 @@ Credits:
 <!-- Infinite scroll JS -->
 <script src="https://static.tumblr.com/h7vugp8/L8Vqz4k0e/infinitescroll.min.js"></script>
 {/block:IfInfiniteScroll}
-<script src="discord-theme.js"></script>
+<script src="https://static.tumblr.com/h7vugp8/kGYqz4n18/discord-theme.js"></script>
 
 </body>
 
