Moved all custom styles out to main HTML file

--- a/discord-theme.html
+++ b/discord-theme.html
@@ -74,7 +74,85 @@ Credits:
 <link rel="stylesheet" href="discord-theme.css">
 
 <style type="text/css">
-/* To be added from the above linked sheet */
+body {
+	font-size: {text:Font size};
+	--banner-header: {color:Title if header is showing};
+	--discord-blue: {color:Discord logo};
+	--green: {color:Servers navbar};
+	--font-normal: {font:Body font}, "Helvetica Neue", Helvetica, Arial, sans-serif
+}
+h1, h2, h3, h4, h5, h6 { font-family: {font:Header font}, var(--font-normal) }
+body.dark {
+	--header: {color:Dark mode headers and accent};
+	--link: {color:Dark mode links}
+}
+body.light {
+	--header: {color:Light mode headers and accent};
+	--link: {color:Light mode links}
+}
+body.dark strong, body.dark b { color: {color:Dark mode bold} }
+body.light strong, body.light b { color: {color:Light mode bold} }
+body.dark em, body.dark i { color: {color:Dark mode italics} }
+body.light em, body.light i { color: {color:Light mode italics} }
+
+
+#sidebar header.banner img { object-position: {select:Header image focus area} }
+{block:ShowAvatar}
+.blogname {
+	display: grid;
+	grid-template-columns: 2em 1fr;
+	column-gap: 0.5em
+}
+{/block:ShowAvatar}
+{block:IfNotInfiniteScroll}
+#navigate .paginate {
+	display: flex;
+	align-items: center
+}
+.paginate a { padding: 0.5em; margin: -0.5em }
+.paginate a:hover { filter: drop-shadow(0 0 0.25em var(--link)) }
+.paginate .prev {
+	-webkit-transform: rotate(90deg);
+	-ms-transform: rotate(90deg);
+	transform: rotate(90deg)
+}
+.paginate .next {
+	-webkit-transform: rotate(-90deg);
+	-ms-transform: rotate(-90deg);
+	transform: rotate(-90deg);
+	padding-left: 0.6em
+}
+.paginate p {
+	text-align: center;
+	font-weight: 600
+}
+.paginate p.curr::after {
+	content: "/";
+	margin: 0 0.25em
+}
+{/block:IfNotInfiniteScroll}
+{block:IfInfiniteScroll}
+#navigate .paginate { display: none }
+{block:IfManualLoadForInfiniteScroll}
+#iscroll {
+	display: block;
+	text-align: center;
+	background-color: var(--sidebar);
+	margin: -4em 1em 5.5em calc(var(--left) + 1em);
+	padding: 0.5em;
+	border-radius: 0.5em;
+	font-variant: small-caps;
+	cursor: pointer;
+	transition: .2s
+}
+#iscroll:hover { background-color: var(--bg-dark) }
+{/block:IfManualLoadForInfiniteScroll}
+{/block:IfInfiniteScroll}
+
+.timestamp::before { border-top-color: {color:Timestamps and post divider} }
+.timestamp .date { color: {color:Timestamps and post divider} }
+.timestamp .datelink { color: {color:Post divider More link} }
+.timestamp .datelink span { background: {color:Timestamps and post divider} }
 
 {CustomCSS}
 </style>
@@ -773,7 +851,6 @@ Credits:
 <script src="https://unpkg.com/@popperjs/core@2"></script>
 <script src="https://unpkg.com/tippy.js@6"></script>
 {block:IfInfiniteScroll}
-<!-- Infinite scroll JS -->
 <script src="https://static.tumblr.com/h7vugp8/L8Vqz4k0e/infinitescroll.min.js"></script>
 {/block:IfInfiniteScroll}
 <script src="https://static.tumblr.com/h7vugp8/kGYqz4n18/discord-theme.js"></script>
