Correctly nested load more posts button

--- a/discord-theme.html
+++ b/discord-theme.html
@@ -756,9 +756,9 @@ body.light em, body.light i { color: {color:Light mode italics} }
 	{/block:Posts}
 </main>
 
-{block:IfManualLoadForInfiniteScroll}
+{block:IfManualLoadForInfiniteScroll}{block:IndexPage}
 <a id="iscroll">{lang:Load more posts}</a>
-{/block:IfManualLoadForInfiniteScroll}
+{/block:IndexPage}{/block:IfManualLoadForInfiniteScroll}
 
 <footer id="navigate"><div>
 	<svg width="1.25em" height="1.25em" viewBox="0 0 512 512" xmlns="http://www.w3.org/2000/svg" version="1.1" preserveAspectRatio="xMinYMin"><use xlink:href="#img-copyright"></use></svg>
