Fixed tag page chronological sort option

--- a/discord-theme.html
+++ b/discord-theme.html
@@ -782,7 +782,7 @@ body.light em, body.light i { color: {color:Light mode italics} }
 	<p>{Name} {CopyrightYears}</p>
 	{block:TagPage}
 	<div class="navigation">
-	<!--<p class="tagorder">Sort <a href="{TagURL}">newest first</a> or <a href="{TagURLChrono}">oldest first</a></p>-->
+	<p class="tagorder">Sort <a href="/tagged/{URLSafeTag}">newest first</a> or <a href="/tagged/{URLSafeTag}/chrono">oldest first</a></p>
 	{/block:TagPage}
 	{block:Pagination}
 	<div class="paginate">
