Moved usernames' font size out for responsiveness

--- a/discord-theme.html
+++ b/discord-theme.html
@@ -83,8 +83,11 @@
 <!-- Main styles -->
 <link rel="stylesheet" href="https://static.tumblr.com/h7vugp8/FVuqz4yca/discord-theme.min.css">
 {block:PostNotes}
-<link rel="stylesheet" href="https://static.tumblr.com/h7vugp8/qS1qz6a7s/notes.min.css">
-<style type="text/css">#notes .source_tumblelog::before { content:"{lang:Via} " }</style>
+<link rel="stylesheet" href="https://static.tumblr.com/h7vugp8/2Ydqz6d6h/notes.min.css">
+<style type="text/css">
+#notes .action a { font-size: {text:Font size} }
+#notes .source_tumblelog::before { content:"{lang:Via} " }
+</style>
 {/block:PostNotes}
 
 <!-- Customizable styles -->
