--- a/discord-theme.html
+++ b/discord-theme.html
@@ -27,12 +27,12 @@
 	<meta name="if:Show Like buttons" content="1">
 	<meta name="if:Show tags" content="1">
 	<meta name="if:Show search bar" content="1">
-	<meta name="if:Color mode toggle" content="1">
+	<meta name="if:Show color theme toggle" content="1">
 	<meta name="if:Infinite scroll" content="0">
 	<meta name="if:Manual load for infinite scroll" content="1">
 	
-	<meta name="select:Default theme" content="dark" title="Dark">
-	<meta name="select:Default theme" content="light" title="Light">
+	<meta name="select:Default color theme" content="dark" title="Dark">
+	<meta name="select:Default color theme" content="light" title="Light">
 	
 	<meta name="select:Header image focus area" content="center" title="Center">
 	<meta name="select:Header image focus area" content="top" title="Top">
@@ -40,8 +40,9 @@
 	<meta name="select:Header image focus area" content="left" title="Left">
 	<meta name="select:Header image focus area" content="right" title="Right">
 	
-	<meta name="font:Body font" content="Whitney">
-	<meta name="font:Header font" content="Ginto">
+	<meta name="font:Body font" content="Gibson">
+	<meta name="font:Header font" content="Gibson">
+	<meta name="if:Use Discord font if available" content="1">
 	<meta name="text:Font size" content="16px">
 	
 	<meta name="text:FAQ" content="">
@@ -76,18 +77,18 @@
     <script src="https://unpkg.com/@popperjs/core@2"></script>
     <script src="https://unpkg.com/tippy.js@6"></script>
     {block:IfInfiniteScroll}
-    <script src="https://static.tumblr.com/h7vugp8/L8Vqz4k0e/infinitescroll.min.js"></script>
+    <script src="https://unpkg.com/infinite-scroll@4/dist/infinite-scroll.pkgd.min.js"></script>
     {/block:IfInfiniteScroll}
-    <script src="https://static.tumblr.com/h7vugp8/f8Nqz4t7a/discord-theme.min.js"></script>
+    <script src="https://wovenstarlight.github.io/discord-theme/discord-theme.min.js"></script>
 	
 <!-- Main styles -->
-<link rel="stylesheet" href="https://static.tumblr.com/h7vugp8/Di6qz6dac/discord-theme.min.css">
+<link rel="stylesheet" href="https://wovenstarlight.github.io/discord-theme/discord-theme.min.css">
 {block:PostNotes}
-<link rel="stylesheet" href="https://static.tumblr.com/h7vugp8/2Ydqz6d6h/notes.min.css">
 <style type="text/css">
 #notes .action a { font-size: {text:Font size} }
 #notes .source_tumblelog::before { content:"{lang:Via} " }
 </style>
+<link rel="stylesheet" href="https://wovenstarlight.github.io/discord-theme/notes.min.css">
 {/block:PostNotes}
 
 <!-- Customizable styles -->
@@ -97,9 +98,9 @@ body {
 	--banner-header: {color:Title if header is showing};
 	--discord-blue: {color:Discord logo};
 	--green: {color:Servers navbar};
-	--font-normal: {font:Body font}, "Helvetica Neue", Helvetica, Arial, sans-serif
+	--font-normal: {block:IfUseDiscordFontIfAvailable}Whitney,{/block:IfUseDiscordFontIfAvailable} {font:Body font}, "Helvetica Neue", Helvetica, Arial, sans-serif
 }
-h1, h2, h3, h4, h5, h6 { font-family: {font:Header font}, var(--font-normal) }
+h1, h2, h3, h4, h5, h6 { font-family: {block:IfUseDiscordFontIfAvailable}Ginto, Whitney,{/block:IfUseDiscordFontIfAvailable} {font:Header font}, var(--font-normal) }
 body.dark {
 	--header: {color:Dark mode headers and accent};
 	--link: {color:Dark mode links}
@@ -191,7 +192,7 @@ body.light em, body.light i { color: {color:Light mode italics} }
 </head>
 
 
-<body class="{select:Default theme} {block:IfNotShowSearchBar}no-search{/block:IfNotShowSearchBar}">
+<body class="{select:Default color theme} {block:IfNotShowSearchBar}no-search{/block:IfNotShowSearchBar}">
 
 <nav id="servers">
 	<a href="/" data-tippy-content="{lang:Home}" class="{block:HomePage}active{/block:HomePage}">
@@ -287,9 +288,9 @@ body.light em, body.light i { color: {color:Light mode italics} }
 			<svg width="1.5em" height="1.5em" viewBox="0 -6 24 24" xmlns="http://www.w3.org/2000/svg" version="1.1" preserveAspectRatio="xMinYMin"><use xlink:href="#img-search"></use></svg>
 		</form>
 		{/block:IfShowSearchBar}
-		{block:IfColorModeToggle}
+		{block:IfShowColorThemeToggle}
 		<a id="darklight" data-tippy-content="Toggle dark/light mode" onclick='$("body").toggleClass("dark light")'><svg width="1.25em" height="1.25em" viewBox="0 0 512 512" xmlns="http://www.w3.org/2000/svg" version="1.1" preserveAspectRatio="xMinYMin"><use xlink:href="#img-adjust"></use></svg></a>
-		{/block:IfColorModeToggle}
+		{/block:IfShowColorThemeToggle}
 		<!-- DO NOT REMOVE CREDIT. LEAVE THIS INTACT. -->
 		<a href="https://wovenstarlight.tumblr.com" data-tippy-content="Theme made by wovenstarlight"><svg width="1.25em" height="1.25em" viewBox="1 1 10 10" xmlns="http://www.w3.org/2000/svg" version="1.1" preserveAspectRatio="xMinYMin"><use xlink:href="#img-credit"></use></svg></a>
 		<!--DO NOT REMOVE CREDIT. LEAVE THIS INTACT.-->
