--- a/discord-theme.html
+++ b/discord-theme.html
@@ -156,9 +156,7 @@ body.light em, body.light i { color: {color:Light mode italics} }
 	margin: 0 0.25em
 }
 {block:IfInfiniteScroll}
-{block:IndexPage}
-#navigate .paginate { display: none }
-{/block:IndexPage}
+#navigate .paginate.index { display: none }
 {block:IfManualLoadForInfiniteScroll}
 #iscroll {
 	display: block;
@@ -777,9 +775,9 @@ body.light em, body.light i { color: {color:Light mode italics} }
 	{/block:PostNotes}
 </main>
 
-{block:IfManualLoadForInfiniteScroll}{block:IndexPage}
+{block:IfInfiniteScroll}{block:IfManualLoadForInfiniteScroll}{block:Pagination}
 <a id="iscroll">{lang:Load more posts}</a>
-{/block:IndexPage}{/block:IfManualLoadForInfiniteScroll}
+{/block:Pagination}{/block:IfManualLoadForInfiniteScroll}{/block:IfInfiniteScroll}
 
 <footer id="navigate"><div>
 	<svg width="1.25em" height="1.25em" viewBox="0 0 512 512" xmlns="http://www.w3.org/2000/svg" version="1.1" preserveAspectRatio="xMinYMin"><use xlink:href="#img-copyright"></use></svg>
@@ -789,7 +787,7 @@ body.light em, body.light i { color: {color:Light mode italics} }
 	<p class="tagorder">Sort <a href="/tagged/{URLSafeTag}">newest first</a> or <a href="/tagged/{URLSafeTag}/chrono">oldest first</a></p>
 	{/block:TagPage}
 	{block:Pagination}
-	<div class="paginate">
+	<div class="paginate index">
 		{block:PreviousPage}<a class="prev" href="{PreviousPage}" data-tippy-content="{lang:Previous}"><svg width="1.25em" height="1.25em" viewBox="0 0 18 18" xmlns="http://www.w3.org/2000/svg" version="1.1" preserveAspectRatio="xMinYMin"><use xlink:href="#img-arrow"></use></svg></a>{/block:PreviousPage}
 		<p class="curr">{CurrentPage}</p>
 		<p>{TotalPages}</p>
@@ -799,7 +797,7 @@ body.light em, body.light i { color: {color:Light mode italics} }
 	{block:TagPage}</div>{/block:TagPage}
 	
 	{block:PermalinkPage}{block:PermalinkPagination}
-	<div class="paginate">
+	<div class="paginate permalink">
 		{block:PreviousPost}<a class="prev" href="{PreviousPost}" data-tippy-content="{lang:Previous post}"><svg width="1.25em" height="1.25em" viewBox="0 0 18 18" xmlns="http://www.w3.org/2000/svg" version="1.1" preserveAspectRatio="xMinYMin"><use xlink:href="#img-arrow"></use></svg></a>{/block:PreviousPost}
 		<p>{lang:See more posts}</p>
 		{block:NextPost}<a class="next" href="{NextPost}" data-tippy-content="{lang:Next post}"><svg width="1.25em" height="1.25em" viewBox="3 2 18 18" xmlns="http://www.w3.org/2000/svg" version="1.1" preserveAspectRatio="xMinYMin"><use xlink:href="#img-arrow"></use></svg></a>{/block:NextPost}
@@ -807,7 +805,7 @@ body.light em, body.light i { color: {color:Light mode italics} }
 	{/block:PermalinkPagination}{/block:PermalinkPage}
 	
 	{block:DayPage}{block:DayPagination}
-	<div class="paginate">
+	<div class="paginate day">
 		{block:PreviousDayPage}<a class="prev" href="{PreviousDayPage}" data-tippy-content="{lang:Previous day}"><svg width="1.25em" height="1.25em" viewBox="0 0 18 18" xmlns="http://www.w3.org/2000/svg" version="1.1" preserveAspectRatio="xMinYMin"><use xlink:href="#img-arrow"></use></svg></a>{/block:PreviousDayPage}
 		<p>{lang:See more posts}</p>
 		{block:NextDayPage}<a class="next" href="{NextDayPage}" data-tippy-content="{lang:Next day}"><svg width="1.25em" height="1.25em" viewBox="3 2 18 18" xmlns="http://www.w3.org/2000/svg" version="1.1" preserveAspectRatio="xMinYMin"><use xlink:href="#img-arrow"></use></svg></a>{/block:NextDayPage}
