Customlike: id -> class, since it repeats

--- a/discord-theme.html
+++ b/discord-theme.html
@@ -774,7 +774,7 @@ body.light em, body.light i { color: {color:Light mode italics} }
 			</a>
 			{/block:IfShowReblogButtons}
 			{block:IfShowLikeButtons}
-			<a id="customlike" href="#" data-tippy-content="Like">
+			<a class="customlike" href="#" data-tippy-content="Like">
 				{LikeButton size=24}
 				<svg width="100%" height="100%" viewBox="0 0 36 36" xmlns="http://www.w3.org/2000/svg" version="1.1" preserveAspectRatio="xMinYMin"><use xlink:href="#img-likes"></use></svg>
 			</a>
