Added iscroll credits + default viewbox on loading

--- a/discord-theme.html
+++ b/discord-theme.html
@@ -8,6 +8,7 @@
     	Toggleable Tumblr controls by seyche: https://seyche.tumblr.com/post/643682133088583680/hi-looove-your-new-blog-theme-i-was-wondering-if
     	Icons from Font Awesome (https://fontawesome.com) and Discord
     	Custom like buttons by Georgi Demirev: https://demirev.cubthemes.com/post/106345243051/changing-like-and-reblog-button-colors-revisited
+		Infinite scroll by Paul Irish and Luke Shumard: https://infinite-scroll.com/
     	NPF photosets fix by glenthemes: https://glenthemes.tumblr.com/post/659034084446748672/npf-images-v3
     	Dark/light mode toggle by eggdesign: https://eggdesign.tumblr.com/post/186889223257/day-night-mode-tutorial-after-featuring-a
 -->
@@ -319,7 +320,7 @@ body.light em, body.light i { color: {color:Light mode italics} }
 		</form>
 		{/block:IfShowSearchBar}
 		{block:IfShowColorModeToggle}
-		<a id="darklight" data-tippy-content="Toggle dark/light mode"><svg width="1.25em" height="1.25em" xmlns="http://www.w3.org/2000/svg" version="1.1" preserveAspectRatio="xMinYMin"><use href="#img-dark"></use></svg></a>
+		<a id="darklight" data-tippy-content="Toggle dark/light mode"><svg width="1.25em" height="1.25em" viewBox="0 0 36 36" xmlns="http://www.w3.org/2000/svg" version="1.1" preserveAspectRatio="xMinYMin"><use href="#img-dark"></use></svg></a>
 		{/block:IfShowColorModeToggle}
 		<!-- DO NOT REMOVE CREDIT. LEAVE THIS INTACT. -->
 		<a href="https://wovenstarlight.tumblr.com" data-tippy-content="Theme made by wovenstarlight"><svg width="1.25em" height="1.25em" viewBox="1 1 10 10" xmlns="http://www.w3.org/2000/svg" version="1.1" preserveAspectRatio="xMinYMin"><use href="#img-credit"></use></svg></a>
