Added link to the demo page

--- a/collapsibles.html
+++ b/collapsibles.html
@@ -1,6 +1,7 @@
 <!--
 	For a set of collapsible boxes. Useful for an information page!
-	The sample page lists my fanfiction, but you can list whatever you'd like ^_^
+	Demo page here: https://starlightthemes.tumblr.com/dropdowns
+	The demo page lists my fanfiction, but you can list whatever you'd like ^_^
 
 	Two part instructions below. Ctrl+F/Cmd+F to find them:
 		1. HTML/JS: Installing on blog page
