Noted to not use links inside clpbutton

--- a/collapsibles.html
+++ b/collapsibles.html
@@ -66,6 +66,13 @@ $(".collapsible > .clpbutton").click( function() {
 	want, and nest as many collapsibles (place a collapsible section inside
 	another collapsible section) as you like. Once you're done, make sure to
 	Update Preview, ensure that everything looks as you want it to, and Save.
+
+	****IMPORTANT NOTE:****
+		Make sure you don't put a link inside the "clpbutton"! Since this is
+		the text to open/close the dropdown, you don't want to add something
+		clickable that DOESN'T open the dropdown. Since the text is already
+		link-colored, you might confuse people, and they won't open/won't be
+		able to open the collapsible section.
 	
 	When you're nesting collapsibles, make sure to place the entire collapsible
 	section, <div class="collapsible"></div>, INSIDE the outer section's content,
